                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 04-03-2005 fixed: Volume amplification setting for videos was applied to music as well.
  - 04-03-2005 enabled: autosync=30 by default
  - 04-03-2005 fixed: using autosync caueses problems when resuming from pause. (updated mplayer.dll again)
  - 03-03-2005 updated: mplayer.dll to current cvs (final real fix + autosync fix)
  - 03-03-2005 changed: background music info scanner is default now (setting removed)
  - 03-03-2005 added: Cached thumb location is now stored in the database.  Music database SHOULD auto-update when you first access My Music.
  - 03-03-2005 removed: old mplayer use.  We now only use the system/players/mplayer directory.
  - 03-03-2005 fixed: music overlay sometimes shows no default thumb, eg. when starting a http stream with python
  - 03-03-2005 changed: GUIButtonControl and GUIToggleButtonControl send their click message before executing a action or a hyperlink
  - 02-03-2005 fixed: screensaver preview sometimes crashes
  - 02-03-2005 fixed: screensaver preview button is enabled when screensaver is off
  - 02-03-2005 changed: folders and files from smb will be sorted by modification date now
  - 02-03-2005 added: Screensavers from the competition.
  - 02-03-2005 changed: Rendering of CGUIImage -> big boost in gui framerate (most noticeable in 1080i)
  - 02-03-2005 fixed: [ 1155038 ] "Video calibration" error
  - 02-03-2005 changed: moved cdda reading to CFileCdda class
  - 02-03-2005 fixed: cdda player, couldn't seek to the start of a track
  - 02-03-2005 fixed: cdda player, gui was choppy when seeking