@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 04-03-2005 fixed: Small thumbs in list controls weren't centered + other small graphical glitches here and there.
+  - 04-03-2005 changed: Zoom in my pictures now goes in steps of 1.0, 1.2, 1.5, 2.0, 2.8, 4.0, 6.0, 9.0, 13.5 and 20.
+  - 04-03-2005 changed: Pictures have more scope for being larger.  Previously they were limited to 2048 in either direction.  The limitation now is 4096 in either direction, with the number of pixels being less than 4Mp (can't have more than this without rewriting the imagelib due to RAM constraints).  Should give better detail when zoomed.
   - 04-03-2005 fixed: Volume amplification setting for videos was applied to music as well.
   - 04-03-2005 enabled: autosync=30 by default
   - 04-03-2005 fixed: using autosync caueses problems when resuming from pause. (updated mplayer.dll again)
